--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
     />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
 
   <body>
@@ -133,9 +133,15 @@
               </ul>
             </section>
           </div>
+          <nav class="page-navigation">
+            <a href="contact.html">
+              <i class="fas fa-envelope"></i> Contact Me
+            </a>
+            <a href="about.html"> <i class="fas fa-user"></i> About Me </a>
+          </nav>
         </section>
       </article>
     </main>
-    <script src="script.js"></script>
+    <script src="scripts/script.js"></script>
   </body>
 </html>
